# uls

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE-APACHE  README.md  deny.toml  release-plz.toml
.agent/skills/rust-coverage-report/: SKILL.md
.agent/skills/rust-coverage-report/scripts/: generate_coverage_report.py
.agent/workflows/: bench.md  test.md
.cargo/: mutants.toml
.config/: nextest.toml
.github/: FUNDING.yml  dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  fcc-monitor.yml  integration-test.yml  mutants-full.yml  mutants-pr.yml  release-plz.yml  release.yml
crates/uls-api/: Cargo.toml
crates/uls-api/src/: error.rs  handlers.rs  lib.rs  response.rs  server.rs
crates/uls-api/tests/: api_tests.rs
crates/uls-cli/: Cargo.toml
crates/uls-cli/src/: config.rs  main.rs  staleness.rs
crates/uls-cli/src/commands/: auto_update.rs  completions.rs  db.rs  frn.rs  lookup.rs  mod.rs  search.rs  serve.rs  stats.rs  update.rs
crates/uls-cli/tests/: cli_integration.rs
crates/uls-core/: Cargo.toml
crates/uls-core/src/: codes.rs  error.rs  lib.rs  records.rs
crates/uls-core/src/records/: aircraft.rs  amateur.rs  antenna.rs  attachment.rs  buildout.rs  coast_ground.rs  common.rs  control_point.rs  emission.rs  entity.rs  frequency.rs  header.rs  history.rs  lease.rs  location.rs  market.rs  path.rs  ship.rs  special_conditions.rs  transfer.rs
crates/uls-db/: Cargo.toml
crates/uls-db/benches/: db_bench.rs
crates/uls-db/src/: bulk_inserter.rs  config.rs  enum_adapters.rs  error.rs  freshness.rs  importer.rs  lib.rs  models.rs  repository.rs  schema.rs
crates/uls-db/tests/: fixture_integration.rs  importer_service.rs  repository_queries.rs
crates/uls-download/: Cargo.toml
crates/uls-download/src/: catalog.rs  client.rs  config.rs  error.rs  lib.rs  progress.rs
crates/uls-download/tests/: client_behavior.rs  download_integration.rs
crates/uls-parser/: Cargo.toml
crates/uls-parser/benches/: parser_bench.rs  parser_gungraun.rs
crates/uls-parser/src/: archive.rs  dat.rs  lib.rs
crates/uls-parser/tests/: archive_fixtures.rs
crates/uls-query/: Cargo.toml
crates/uls-query/benches/: query_bench.rs
crates/uls-query/src/: engine.rs  fields.rs  filter.rs  lib.rs  output.rs
fcc-docs/: auction_freq_sql_02192003.txt  auction_freq_tbl_04222008.txt  special_cond_code_20210329.txt  uls_code_definitions_20240718.txt  uls_radio_service_codes.csv
scripts/: collect_daily_files.sh  cross.sh  download_fcc_data.sh  extract_test_fixture.py
tests/fixtures/fcc-sample/: MANIFEST.md
