[workspace]
resolver = "2"
members = [
    "crates/uls-cli",
    "crates/uls-core",
    "crates/uls-parser",
    "crates/uls-db",
    "crates/uls-download",
    "crates/uls-api",
    "crates/uls-query",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tgies/uls"
authors = ["tgies"]
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

# Web server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.38", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ZIP handling
zip = "4.2"

# Compression
flate2 = "1.1"

# Progress bars
indicatif = "0.18"
console = "0.16"

# HTTP body utilities (for testing axum)
http-body-util = "0.1"

# Testing
tempfile = "3.25"
mockito = "1.7"
wiremock = "0.6"
proptest = "1.8"
rstest = "0.26"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
gungraun = "0.17"

# Workspace crates
uls-core = { path = "crates/uls-core", version = "0.1.1" }
uls-parser = { path = "crates/uls-parser", version = "0.1.1" }
uls-db = { path = "crates/uls-db", version = "0.1.1" }
uls-download = { path = "crates/uls-download", version = "0.2.0" }
uls-api = { path = "crates/uls-api", version = "0.1.1" }
uls-query = { path = "crates/uls-query", version = "0.1.1" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true

[profile.bench]
debug = true  # Required for flamegraph symbols
