[package]
name = "uls-api"
description = "REST API server for FCC ULS data access"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
uls-core.workspace = true
uls-db.workspace = true
uls-query.workspace = true
thiserror.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
reqwest.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
