[package]
name = "uls-api"
description = "REST API server for FCC ULS data access"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
uls-core.workspace = true
uls-db.workspace = true
uls-query.workspace = true
thiserror.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
rstest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
uls-core.workspace = true
uls-db.workspace = true
uls-query.workspace = true
