[package]
name = "uls-core"
description = "Core data types and models for FCC ULS data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
