[package]
name = "uls-db"
description = "SQLite database layer for FCC ULS data storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
uls-core.workspace = true
uls-parser.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
zip.workspace = true
criterion.workspace = true

[[bench]]
name = "db_bench"
harness = false
