[package]
name = "uls-parser"
description = "Parser for FCC ULS pipe-delimited DAT files"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
uls-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
zip.workspace = true
phf = { version = "0.13.1", features = ["macros"] }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
rstest.workspace = true
criterion.workspace = true
gungraun.workspace = true

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "parser_gungraun"
harness = false
