[package]
name = "uls-query"
description = "Query engine for FCC ULS data lookups"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
uls-core.workspace = true
uls-db.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
