[package]
name = "uls-query"
description = "Query engine for FCC ULS data lookups"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
uls-core.workspace = true
uls-db.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
criterion.workspace = true

[[bench]]
name = "query_bench"
harness = false
